<resources>
    <string name="app_name">DebuggingChallenges</string>
    <string name="what_day_is_it">What day is it?</string>
    <string name="poster_image">Poster Image</string>
    <string name="view_movies">View Movies</string>
    <string name="rating">Rating: %1$.2f</string>
    <string name="go">Go</string>
    <string name="background_changer">Background Changer</string>
    <string name="toolbar">Toolbar</string>
    <string name="hello">Hello!</string>
    <string name="search_history">Search History</string>
    <string name="share_search_history">Share Search History</string>
    <string name="submit">Submit</string>
    <string name="search">Search</string>
    <string name="this_is_a_sample_of_really_large_text">This is a Sample of Really Large Text</string>
</resources>
